<resources>
    <string name="app_name">我是猎妖师</string>

    <!--登录界面-->
    <string name="login_addict1">抵制不良游戏，拒绝盗版游戏。</string>
    <string name="login_addict2">注意自我保护，谨防上当受骗。</string>
    <string name="login_addict3">适度游戏益脑，沉迷游戏伤身。</string>
    <string name="login_addict4">合理安排时间，享受健康生活。</string>
    <string name="login_info1">批准文号：新广出审[2017]1025号</string>
    <string name="login_info2">游戏运营单位：杭州西朗科技有限公司</string>
    <string name="login_info3">出版物号：ISBN978&#8211;7&#8211;7979&#8211;4607&#8211;0</string>
    <string name="login_info4">著作权登记号：2016SR202875</string>
    <string name="login_info5">著作权人：浙江古川科技股份有限公司</string>
    <string name="login_info6">出版服务单位：宁波东海岸电子音像出版社</string>
    <string name="login_info7">本游戏适合年满18周岁以上的用户使用</string>
    <string name="login_info8">版本号：%s</string>
    <string name="login_protocol">我已经详细阅读并同意《服务协议》和《隐私政策》</string>
    <string name="login">登录</string>
    <string name="wechat">微信登录</string>
    <string name="qq">QQ登录</string>
    <string name="login_mobile">手机登录</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="payment_way">支付方式</string>
    <string name="pay_confirm">确认支付</string>
</resources>